--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <data>
-
+        <variable
+            name="vm"
+            type="mochoi.recyclerviewsample.SampleViewModel"/>
     </data>
 <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
@@ -27,6 +29,7 @@
         android:layout_height="229dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        app:items="@{vm.items}"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
