--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:layout_height="229dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:items="@{vm.items}"
+        items="@{vm.items}"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
